fixed viewheight on mobile

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@
 }
 
 .github {
-	margin: 2rem 0;
+	margin: 1rem 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -292,7 +292,7 @@ button:hover {
 	}
 	#keyboard-container {
 		min-width: 100vw;
-		height: 100vh;
+		height: 100dvh;
 
 		position: absolute;
 		top: 0;
